# Thesaurus_Rex

./: .gitignore  README.md  demo.cpp  notes-cron-deployment-restarts.md  requirements.txt  reword.py  setup.cfg  setup.py  thesr.py
docker/: Dockerfile  Dockerfile.bak  README.md  docker-compose.yml  kind_config.yaml
docker/flask/: setup.py
docker/flask/thesr_flask_app/: __init__.py
docker/flask/thesr_flask_app/static/: avoid_space.js
docker/go_live/: docker-compose.yml
docker/go_live/docker-compose/templates/: certbot-deployment.yaml  certbot-service.yaml  nginx-reverse-proxy-deployment.yaml  nginx-reverse-proxy-service.yaml  nginx_reverse_proxy-service.yaml  waitress-flask-wsgi-deployment.yaml  waitress-flask-wsgi-service.yaml  waitress_flask_wsgi-service.yaml
docker/go_live/services/certbot/: Dockerfile
docker/go_live/services/nginx/: Dockerfile  README.md
docker/init_TLS/: docker-compose.yml
docker/nginx/sites-available/: default
docker/services/docker_nginx/: Dockerfile  README.md
docker/services/docker_waitress_flask/: .dockerignore  Dockerfile  README.md
docker/src/: app.py  index.html
docker/src/static/: style.css
docker/src/templates/: index.html  thesr.html
docker_k8s/: README.md  ex-pv-from-pvc.yaml  example-pod.yaml  example-pv.yaml  example-sc-pv-pvc-pod.yaml  k3s-install.md  kind_config.yaml
docker_k8s/go_live/: docker-compose.yml
docker_k8s/helm/thesr/: Chart.yaml  values.yaml
docker_k8s/init_TLS/: docker-compose.yml
docker_k8s/mount-test/: example-sc-pv-pvc-pod.yaml
thesr/: thesr.py
(+38 files in other folders)
