[metadata]
name = thesr
version = 0.0.1
author = John Hupperts
author_email = jrock4503@hotmail.com
description = Thesaurus (and also Dictionary)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/treatmesubj/Thesaurus_Rex
project_urls =
    Bug Tracker = https://github.com/treatmesubj/Thesaurus_Rex/issues

requires-dist
    requests
    beautifulsoup4
    rich
    pyspellchecker

[options]
package_dir
    Thesaurus_Rex 
packages
    thesr 
